--- a/docs/types/impredicativity.ltx
+++ b/docs/types/impredicativity.ltx
@@ -87,7 +87,8 @@ $$
 \begin{array}{lrcl}
 \textsc{[$\leq$can1]} & canon\left[(\mathsf{T} \; \overline{\sigma_1}) \leq \sigma_2\right] & = & (\mathsf{T} \; \overline{\sigma_1}) \sim \sigma_2 \\
 \textsc{[$\leq$can2]} & canon\left[(\forall \overline{a}. Q_1 \Rightarrow \sigma_1) \leq (\mathsf{T} \; \overline{\sigma_2})\right] & = & [\overline{a \mapsto \alpha}]\sigma_1 \leq (\mathsf{T} \; \overline{\sigma_2}) \wedge [\overline{a \mapsto \alpha}]Q_1 \\
-\textsc{[$\leq$can2']} & canon\left[(\forall \overline{a}. Q_1 \Rightarrow a) \leq \sigma_2\right] & = & \alpha \sim \sigma_2 \wedge [\overline{a \mapsto \alpha}]Q_1 \\
+\textsc{[$\leq$can2a]} & canon\left[(\forall \overline{a}. Q_1 \Rightarrow a) \leq \sigma_2\right] & = & \alpha \sim \sigma_2 \wedge [\overline{a \mapsto \alpha}]Q_1 \\
+\textsc{[$\leq$can2b]} & canon\left[(Q_1 \Rightarrow \sigma_1) \leq \sigma_2\right] & = & \sigma_1 \sim \sigma_2 \wedge Q_1 \\
 \textsc{[$\leq$can3]} & canon\left[\sigma_1 \leq (\forall \overline{a}. Q_2 \Rightarrow \sigma_2)\right] & = & \forall \overline{a}. \, (Q_2 \supset \sigma_1 \leq \sigma_2) \\
 \end{array}
 $$
@@ -96,7 +97,7 @@ Note that rule {\sc [$\leq$can2]} can only be applied when the right-hand side i
 \item If we did so in the case of a variable, and later that variable was substituted by some other type, we would need to remember the instantiation done by this rule and apply it to the substituted value. Instead, we prefer to defer the instantiation of the constraint until the variable is changed to another type.
 \item In the case of a quantified type, we want to apply always {\sc [$\leq$can3]} first, which may in turn lead to an application of {\sc [$\leq$can2]} inside the implication.
 \end{itemize}
-However, when the left-hand is of the form $\forall a. Q => a$, we can always safely instantiate it. For example, if we have $(\forall a. \mathtt{Monoid} \; a \Rightarrow a) \leq \tau$, this is equivalent to $\mathtt{Monoid} \; \tau$ (note that the rule will actually produce another equivalent version $\mathtt{Monoid} \; \alpha \wedge \alpha \sim \tau$). This is the duty of rule {\sc [$\leq$can2']}.
+However, when the left-hand is of the form $\forall a. Q \Rightarrow a$, we can always safely instantiate it. For example, if we have $(\forall a. \mathtt{Monoid} \; a \Rightarrow a) \leq \tau$, this is equivalent to $\mathtt{Monoid} \; \tau$ (note that the rule will actually produce another equivalent version $\mathtt{Monoid} \; \alpha \wedge \alpha \sim \tau$). This is the duty of rule {\sc [$\leq$can2a]}.
 
 \subsubsection*{Design choice: rules for $\to$}
 
@@ -117,12 +118,12 @@ In the constraint solving process we do not only need to find a solution for the
 $$W_1 = \lambda (x :: \mathsf{T} \; \overline{\sigma_1}). \; x \rhd W_2$$
 where $\rhd$ is the cast operator which applies a coercion $\rho_1 \to \rho_2$ to a value of type $\rho_1$ to produce the same value, but typed as $\rho_2$.
 
-\paragraph{Rule {\sc [$\leq$can2]}.} We need to build $W_1 :: (\forall \overline{a}. Q_1 \Rightarrow \sigma_1) \to \mathsf{T} \; \overline{\sigma_2}$ given $W_2 :: [\overline{a \mapsto \alpha}]\sigma_1 \to (\mathsf{T} \; \overline{\sigma_2})$ and $W_3 :: [\overline{a \mapsto \alpha}]Q_1$. The first step is to get $[\overline{a \mapsto \alpha}]\sigma_1$ from $\forall \overline{a}. Q_1 \Rightarrow \sigma_1$, to do that we need to make a type application and afterwards apply the witness for $Q_1 \Rightarrow \sigma_1$:
+\paragraph{Rules {\sc [$\leq$can2]} and {\sc [$\leq$can2b]}.} We need to build $W_1 :: (\forall \overline{a}. Q_1 \Rightarrow \sigma_1) \to \mathsf{T} \; \overline{\sigma_2}$ given $W_2 :: [\overline{a \mapsto \alpha}]\sigma_1 \to (\mathsf{T} \; \overline{\sigma_2})$ and $W_3 :: [\overline{a \mapsto \alpha}]Q_1$. The first step is to get $[\overline{a \mapsto \alpha}]\sigma_1$ from $\forall \overline{a}. Q_1 \Rightarrow \sigma_1$, to do that we need to make a type application and afterwards apply the witness for $Q_1 \Rightarrow \sigma_1$:
 $$\lambda (x :: \forall \overline{a}. Q_1 \Rightarrow \sigma_1). \; x \; \alpha \; W_3 :: (\forall \overline{a}. Q_1 \Rightarrow \sigma_1) \to [\overline{a \mapsto \alpha}]\sigma_1$$
 The last step is then applying $W_2$ to convert it to our desired type:
 $$W_1 = \lambda (x :: \forall \overline{a}. Q_1 \Rightarrow \sigma_1). \; W_2 \; (x \; \alpha \; W_3)$$
 
-\paragraph{Rule {\sc [$\leq$can2']}.} This is very similar to the previous case, but $W_2$ now is an evidence for $\alpha \sim \sigma_2$. The evidence for the original constraint is:
+\paragraph{Rule {\sc [$\leq$can2a]}.} This is very similar to the previous case, but $W_2$ now is an evidence for $\alpha \sim \sigma_2$. The evidence for the original constraint is:
 $$W_1 = \lambda (x :: \forall \overline{a}. Q_1 \Rightarrow a). \; (x \; \alpha \; W_3) \rhd W_2$$
 
 \paragraph{Rule {\sc [$\leq$can3']}.} This is the most complicated rule for which to generate evidence. As usual, we want to generate evidence $W_1 :: \sigma_1 \to (\forall \overline{a}. Q_2 \Rightarrow \sigma_2)$. In order to do so, we can use the evidence generated by solving $\forall \overline{a}. \, (Q_2 \supset \sigma_1 \leq \sigma_2)$. In GHC, this implication generates two pieces of information: evidence $W_2 :: \sigma_1 \to \sigma_2$, and a series of bindings which might use the data in $Q_2$ and which make $W_2$ correct. We shall denote those bindings by $\square$.
@@ -164,7 +165,7 @@ type instance  F  [a]  b = b -> b
 Using the rule of always instantiating, the result of $\gamma \sim \mathsf{F} \; [Int] \; \beta$, $(\forall a. a \to a) \leq b$ is $\gamma \sim (\delta \to \delta) \to (\delta \to \delta)$. We have lost polymorphism in a way which was not expected. What we hoped is to get $\gamma \sim (\forall a. a \to a) \to (\forall a. a \to a)$.
 \item Thus, we need to have a way to instantiate variables appearing in type classes and families, but only as necessary. We do this by temporarily instantiating variables when checking for axiom application, and returning extra constraints which make this instantiation possible if the match is successful.
 
-For example, in the previous case we want to apply the axiom $\forall e. \mathtt{Eq} \; e \Rightarrow \mathtt{Eq} \; [e]$, and thus we need to instantiate $a$. We return as residual constraints $\mathtt{Eq} \; \xi \wedge \mathtt{Eq} \; \alpha \sim \mathtt{Eq} \; \mathrm{[}\xi\mathrm{]}$, and the solver takes care of the rest, that is, $\forall a. \mathrm{[}a\mathrm{]} \leq \mathrm{[}\xi\mathrm{]}$. 
+For example, in the previous case we want to apply the axiom $\forall e. \mathtt{Eq} \; e \Rightarrow \mathtt{Eq} \; [e]$, and thus we need to instantiate $a$. We return as residual constraints $\mathtt{Eq} \; \xi \wedge \mathtt{Eq} \; \alpha \sim \mathtt{Eq} \; \mathrm{[}\xi\mathrm{]}$, and the solver takes care of the rest, that is, $\forall a. \mathrm{[}a\mathrm{]} \leq \mathrm{[}\xi\mathrm{]}$.
 \end{enumerate}
 
 \subsection*{Generalization}
@@ -176,7 +177,7 @@ One nasty side-effect of this approach to impredicativity is that the solver may
 \noindent There are two main procedures to move to types without $\leq$ constraints:
 \begin{itemize}
 \item \emph{Convert all $\leq$ constraints into type equality}. In the previous case, the type of {\tt singleton id} is $\forall a. \, a \sim (\forall b. \, b \to b) \Rightarrow [a]$, or equivalently, $[\forall b. \, b \to b]$.
-\item \emph{Generate a type with the less possible polymorphism}, by moving quantifiers out of the $\leq$ constraints to top-level. In this case, the type given to {\tt singleton id} is $\forall b. \, [b \to b]$. 
+\item \emph{Generate a type with the less possible polymorphism}, by moving quantifiers out of the $\leq$ constraints to top-level. In this case, the type given to {\tt singleton id} is $\forall b. \, [b \to b]$.
 \end{itemize}
 We prefer the second option, since it leads to types which are more similar to those already inferred by GHC. Note that this approximation only applies to unannotated top-level bindings: the user can always ask to give $[\forall a. \, a \to a]$ as a type for {\tt singleton id} via an annotation.
 
@@ -263,7 +264,7 @@ In the $\Gamma \vdash e : \sigma \leadsto C$ judgement, $\Gamma$ and $e$ are inp
 \quad K_i : \forall \overline{a} \overline{b_i}. Q_i \Rightarrow \overline{v_i} \to \textsf{T} \, \overline{a} \in \Gamma \qquad \overline{b_i} \text{ fresh} \\
 \quad \Gamma, \overline{x_i : [\overline{a \mapsto \gamma}]v_i} \vdash u_i : \tau_i \leadsto C_i \\
 \quad \overline{\delta_i} = fuv(\tau_i,C_i) - fuv(\Gamma,\overline{\gamma}) \\
-\quad C'_i = 
+\quad C'_i =
 \begin{cases}
 C_i \wedge \tau_i \sim \beta \qquad \text{if } \overline{b_i} \text{ and } Q_i \text{ empty} \\
 \forall \overline{\delta_i}. \, ([\overline{a \mapsto \gamma}])Q_i \supset C_i \wedge \tau_i \sim \beta
@@ -439,7 +440,7 @@ $\theta = [\overline{a \to \alpha}] \qquad
 \quad K_i : \forall \overline{a} \overline{b_i}. Q_i \Rightarrow \overline{v_i} \to \textsf{T} \, \overline{a} \in \Gamma \qquad \overline{b_i} \text{ fresh} \\
 \quad \Gamma, \overline{x_i : [\overline{a \mapsto \gamma}]v_i} \vdash_\Downarrow u_i : \sigma \leadsto C_i \\
 \quad \overline{\delta_i} = fuv(\sigma,C_i) - fuv(\Gamma,\overline{\gamma}) \\
-\quad C'_i = 
+\quad C'_i =
 \begin{cases}
 C_i \qquad \text{if } \overline{b_i} \text{ and } Q_i \text{ empty} \\
 \forall \overline{\delta_i}. \, ([\overline{a \mapsto \gamma}])Q_i \supset C_i)
@@ -463,7 +464,7 @@ data S a = S a
 f :: [Char] -> S a
 f x = S (error x)
 \end{verbatim}
-If we apply {\sc [AppFunNonVar]} directly, we instantiate the type of $error :: \forall b. [Char] \to b$ to $[Char] \to \beta$. 
+If we apply {\sc [AppFunNonVar]} directly, we instantiate the type of $error :: \forall b. [Char] \to b$ to $[Char] \to \beta$.
 Since we are pushing down a unification variable $\alpha$ because of the previous application of {\sc [AppFunNonVar]} to $S :: \forall a. \, a \to S \; a$, we obtain a constraint $\beta \leq \alpha$. Since there are no more restrictions to either $\alpha$ or $\beta$, we are not stuck in solving.
 
 \section*{Examples}
